changes related to questionquiztable - 3